log
Thu 20 Apr 2023 07:05:41 PM UTC: 
 tests:  1|8
total_score: 0/70
31902d4
Thu 20 Apr 2023 07:07:29 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:53: error: expected ‘)’ before ‘;’ token
   41 |   TreeMap * map = (TreeMap*) malloc (sizeof(TreeMap);
      |                                     ~               ^
      |                                                     )
treemap.c:45:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   45 | }
      | ^
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
In file included from test.c:4:
treemap.c:41:13: error: unused variable ‘map’ [-Werror=unused-variable]
   41 |   TreeMap * map = (TreeMap*) malloc (sizeof(TreeMap);
      |             ^~~
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
d2aaf49
Thu 20 Apr 2023 07:07:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
235017a
